# job-fit-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
job_fit_engine/: __init__.py  cli.py  engine.py  models.py  pdf.py
specs/: track_a_core_bridge.md
tests/: test_engine.py
tests/anchors/: borderline.txt  borderline_expected.txt  gold.txt  gold_expected.txt  reject.txt  reject_expected.txt
