[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-fit-engine"
version = "0.1.0"
description = "Rule-based Track A job scoring CLI"
readme = "specs/track_a_core_bridge.md"
requires-python = ">=3.10"

[project.scripts]
job-fit-engine = "job_fit_engine.cli:main"

[tool.setuptools]
packages = ["job_fit_engine"]
